--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,11 +24,11 @@
       "import/extensions": [
         "error",
         "ignorePackages"
-      ],
-      "linebreak-style":
-      [
-        "error",
-        "windows"
       ]
+      // "linebreak-style":
+      // [
+      //   "error",
+      //   "windows"
+      // ]
     }
   }
